🔧 fix distorted rendering on extra large screen

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,7 @@
 
   .model {
     width: 95%;
+    max-width: 1400px;
     max-height: 720px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
